# triangle-splatting2

./: .gitignore  CMakeLists.txt  README.md  compile.sh  full_eval.py  requirements.txt  train.py
arguments/: __init__.py
scene/: dataset_readers.py  triangle_model.py
src/: CMakeLists.txt
src/utils/: common_kernels.cuh  cuda_helpers.h  geometry.h
torch_bindings/: CMakeLists.txt  torch_bindings.cpp  triangulation_bindings.cpp  triangulation_bindings.h
triangle_renderer/: __init__.py
utils/: loss_utils.py
